--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,7 +8,7 @@ header {
   align-items: center;
 	top: 0;
 	left: 0;
-	backgrounf: $base-background;
+	background: $base-background;
 	z-index: 9;
 	height: 45px;
 	overflow: hidden;
