--- a/app/styles/typography.scss
+++ b/app/styles/typography.scss
@@ -15,3 +15,11 @@ h1 {
   line-height: 4.6rem;
   letter-spacing: -.1rem;
 }
+
+@media (max-width: 750px) {
+	h1 {
+		font-size: 2.6rem;
+	  line-height: 3.2rem;
+	  letter-spacing: -.1rem;
+	}
+}
