--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,3 +1,7 @@
 @import './base.scss';
 @import './typography.scss';
 @import './main.scss';
+@import './introcard.scss';
+@import './footer.scss';
+@import './work-item.scss';
+@import './skills.scss';
