--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 @import './colors.scss';
+@import './variables.scss';
 
 header {
 	width: 100%;
@@ -71,101 +72,40 @@ header {
   }
 }
 
-// Intro-card
-#intro-card {
-  vertical-align: top;
+.spacer {
+  width: 85%;
+  max-width: 150px;
+  display: inline-block;
+  height: 6px;
+  background: #333;
+  margin: 80px 0 0 0;
+}
+
+// contents
+.content {
   width: 100%;
-  min-height: 250px;
-  background: $base-background !important;
-  -webkit-print-color-adjust: exact;
+  max-width: $main-width;
+  display: block;
+  vertical-align: top;
+  margin: 0 auto;
+  padding: 0 15px;
+  overflow: hidden;
 
-  // profile-pic
-  .profile-image {
-    width: 25%;
-    display: inline-block;
-    text-align: center;
-    vertical-align: top;
+  p {
+    max-width: 560px;
+    font-size: 1rem;
+  }
 
+  &.about {
     img {
-      max-width: 200px;
-      border: 3px solid #fff;
-      border-radius: 50%;
-    }
-
-    h4 {
-     margin: 0; 
+      max-width: 150px;
     }
   }
+}
 
+@media (max-width: 750px) {
   .spacer {
-    width: 85%;
-    max-width: 150px;
-    display: inline-block;
-    height: 6px;
-    background: #333;
-    margin: 80px 0 0 calc(25% + 15px);
-  }
-
-  // contents
-  .content {
-    width: 74.5%;
-    display: inline-block;
-    vertical-align: top;
-    padding: 0 15px;
-
-    &.padded {
-      margin-left: 25%;
-    }
-
-    p {
-      max-width: 560px;
-      font-size: 1rem;
-    }
-
-    &.about {
-      img {
-        max-width: 150px;
-      }
-    }
-
-    .work-item {
-      padding: 0 15px 25px 15px;
-      border-left: 3px solid #000;
-
-      .floating-ball {
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        z-index: 1;
-        position: absolute;
-        background: #000;
-        margin-top: 13px;
-        left: 9px;
-      }
-
-      h3, h4, h5 {
-        margin: 0;
-      }
-
-      p {
-        margin: 5px 0; 
-      }
-    }
-  }
-
-  @media (max-width: 750px) {
-    .profile-image,
-    .content {
-      width: 100%;
-
-      &.padded {
-        margin-left: 0;
-      }
-    }
-
-    .spacer {
-      margin: 80px 0 0 15px;
-    }
+    margin: 80px 0 0 0;
   }
 }
 
