--- a/app/styles/skills.scss
+++ b/app/styles/skills.scss
@@ -4,6 +4,20 @@
 	vertical-align: top;
 }
 
+.progress-holder {
+	width: 100%;
+	height: 5px;
+	margin: 5px 0 0 0;
+	background: rgba(50, 50, 50, .4);
+	max-width: 100px;
+
+	.progress-bar {
+		height: 5px;
+		background: rgba(50, 50, 50, 1);
+		max-width: 100px;
+	}
+}
+
 
 @media (max-width: 750px) {
   .skill-niche {
