--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -8,6 +8,14 @@
 	font-style: normal; 
 }
 
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('./fonts/fontawesome-webfont.eot');
+  src: url('./fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('./fonts/fontawesome-webfont.woff2') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf') format('truetype'), url('./fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
 	-webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
